			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05d: *********************************

IMP/MAN: (1/17/07, SMR) Initial code (not working) for Sea-of-Gates router.

IMP: (1/17/07, SMR) Generalized RTNode to handle a RTBounds object.

BUG: (1/8/07, SMR) Explorer tree forgets the expanded state of cell groups (Bug #1246).
FIX: Added an "equals" method to CellGroup so that it could compare these
     temporary objects by name.

IMP: (1/5/07, SMR) Improved maze router and regressions.

IMP: (1/5/07, SMR) Improved "copy topology" routing command to handle busses.
     Added two more regressions.

IMP: (1/3/07, SMR) Compaction tests (from the test menu) work now.

BUG/MAN: (1/3/07, SMR) Cannot drag multiple signals from explorer tree to waveform window.
FIX: In ExplorerTree.java, redid implementation of drag-and-drop from the tree.
     This has the side-effect of disabling the right-click-drag of cells from one library
     to another (which used to cause the entire tree to be copied, see bug #630).

BUG: (12/11/06, DN) Null exception while accesing artwork in palette components (Bug #1270)
FIX: Detecting if parent is null before calling Constraints.getCurrent().modifyNodeInst(this, oldD)
in NodeInst.modifyInstance()

IMP: (12/6/06, DN) Removed invariant "LibId/CellId/ExportId" values of variables must be in the Snapshot.
    Such variables are almost not used, but the maintanence of this invariant took time.

IMP: (12/5/06, RK) Move information from Tech.java into TechTypeMoCMOS, TechTypeCMOS90, and TechTypeTSMC180.

IMP: (12/5/06, GVG) Changes to get Generation test working after recent modifications. Some changes
to get Routing tests to run from regression. Small changes in VerilogReader.

IMP: (12/5/06, SMR) Made "Routing" test menu work.

BUG: (12/5/06, SMR) Maze routing doesn't work.
FIX: In Routing.findNetEnds(), compare Connections more carefully.
